# alpha-studio

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-06-20-stock-alpha-value-system.md
docs/superpowers/specs/: 2026-06-20-stock-alpha-value-system-design.md
scripts/: plot_vs_spy.py
src/alpha_studio/: config.py
src/alpha_studio/backtest/: engine.py  report.py
src/alpha_studio/cli/: main.py
src/alpha_studio/data/: edgar.py  fundamentals.py  prices.py  universe.py
src/alpha_studio/evaluation/: alphalens_eval.py
src/alpha_studio/factors/: definitions.py  lag.py  pipeline.py
src/alpha_studio/model/: scorer.py
tests/: conftest.py  test_cli.py
tests/backtest/: test_engine.py
tests/data/: test_edgar.py  test_fundamentals.py  test_prices.py  test_universe.py
tests/factors/: test_definitions.py  test_lag.py  test_pipeline.py
tests/model/: test_scorer.py
